# myNote

./: 01_driver_model_ioc.md  02_console_subsystem_ioc.md  2022_11_07.md  2022_11_08.md  2022_11_09.md  2022_11_11.md  2022_11_12.md  2022_11_13.md  2022_11_22.md  2022_11_24.md  2022_11_28.md  2022_11_29.md  2022_12_06.md  2023_01_16.md  2023_01_17.md  ABI.md  AI.md  API.md  AutoHotkey.md  Autoconf.md  Bitbake.md  C.md  CPUAddress.md  CPU地址.md  ChatGPT.md  ConfD.md  ContextEngineering.md  Cross compiling.md  C语言中二级指针.md  C语言机制与策略分离示例代码.md  DPDK.md  DSA.md  Database.md  FastAPI.md  Flask.md  FreeRTOS.md  Go.md  Go_note.md  GoogleTest.md  Google_Protobuf_Working_Principle.md  (+378 more)
python/collect_batch_metrics/: README.md  pyproject.toml
python/collect_batch_metrics/docs/: ARCHITECTURE.md
python/collect_batch_metrics/ofdma_monitor/: __init__.py  __main__.py  cli.py  collector.py  config.py  evc_client.py  json_utils.py  logging_setup.py  models.py  nomad_client.py  scheduler.py  storage.py  summary.py  vmc_client.py
python/collect_batch_metrics/tests/: conftest.py  test_cli.py  test_collector.py  test_json_utils.py  test_metrics.py  test_parsers.py  test_scheduler.py  test_summary.py
python/ddd_library_demo/: README.md  main.py  pyproject.toml  requirements.txt
python/ddd_library_demo/borrowing/: __init__.py
python/ddd_library_demo/catalog/: __init__.py
python/ddd_library_demo/infrastructure/: __init__.py  event_bus.py  event_handlers.py  id_generator.py  in_memory_repositories.py  logging_setup.py
python/ddd_library_demo/shared/: __init__.py  domain_event.py  (+3 more)
(+1584 files in other folders)
