[project]
name = "ddd-library-demo"
version = "0.1.0"
description = "A small, heavily-commented educational project demonstrating Domain-Driven Design in Python through a Library Management / Book Borrowing domain."
requires-python = ">=3.10"
readme = "README.md"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
# Lets `import catalog...` / `import borrowing...` / `import shared...` /
# `import infrastructure...` resolve from the project root without an
# editable install - keeps "just run pytest" working with zero setup.
pythonpath = ["."]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
